--- a/edge-service/src/main/resources/application.yml
+++ b/edge-service/src/main/resources/application.yml
@@ -62,3 +62,23 @@ server:
     idle-timeout: 15s
   shutdown: graceful
 
+
+#Default config for all resilience4J circuit breakers
+#sliding-window-size represents the calls
+#permitted-number-of-calls-in-half-open-state represents how many calls are allowed when it is half open
+#failure-rate-threshold if when to transition the circuit breaker to an open state from closed or half open
+#wait-duration-in-open-state represents how much time to wait before moving from open to half open in milliseconds
+#timelimiter is a timeout duration for all time limiters
+
+resilience4j:
+  circuitbreaker:
+    configs:
+      default:
+        sliding-window-size: 20
+        permitted-number-of-calls-in-half-open-state: 5
+        failure-rate-threshold: 50
+        wait-duration-in-open-state: 15000
+  timelimiter:
+    configs:
+      default:
+        timeout-duration: 5s
