--- a/edge-service/src/main/resources/application.yml
+++ b/edge-service/src/main/resources/application.yml
@@ -75,7 +75,7 @@ spring:
           keycloak:
             client-id: edge-service
             client-secret: luckycardshop-keycloak-secret
-            scope: openid
+            scope: openid, roles
         provider:
           keycloak:
             issuer-uri: http://localhost:8080/realms/LuckyCardShop
